# stargazer

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  env.sh  middleware.ts  nginx.conf  package-lock.json  package.json  service.docker-compose.yml
.github/workflows/: backend-cd.yaml  backend-deploy.yaml  backend-unit-test.yaml  backend.yml  deploy-prod.yaml  deploy-producer.yml  deploy-stg.yaml  deploy-transformer.yml  kafka-service-image-push.yml  prebuild.yaml  test-gcp.yaml
actions/: cyphers.ts  getSeggesion.ts  index.ts  neo4j.ts  producer.ts  semantic.ts
actions/adapter/: index.ts
api/: conn.ts  cyphers.ts  index.ts  neo4j.ts
app/: layout.tsx  package-lock.json  package.json  page.tsx
app/app/: layout.tsx
app/chats/: layout.tsx  page.tsx
app/settings/: layout.tsx  page.tsx
app/stars/: page.tsx
backend/: Dockerfile  Makefile  go.mod  go.sum  logger.go  logger_test.go  main.go  middleware.go  otel.go  scheduler.go
backend/controller/: collection.go  collection_test.go  crontab.go  crontab_test.go  folder.go  folder_test.go  init.go  main_test.go  repository.go  (+4 more)
frontend/: Makefile  package-lock.json  package.json  tailwind.config.ts
kafka/: .env.dev  .gitignore  Dockerfile  Makefile  go.mod  go.sum  kafka.docker-compose.yml  main.go  sse.go  test.Dockerfile  test.json
kafka-service/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  handlers.go  main.go  service.go  trace.go
migrate/: 000001_init_db.down.sql  000001_init_db.up.sql  000002_change_vector.down.sql  000002_change_vector.up.sql  000003_add_elk_info.down.sql  000003_add_elk_info.up.sql
next-app/: .env  .gitignore  Dockerfile  instrumentation..ts  instrumentation.node.ts  middleware.ts  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.ts
prisma/: schema.prisma
producer/: Dockerfile  Makefile  go.mod  go.sum  handlers.go  job.go  main.go  middleware.go  service.go
transformer/: .env  .gitignore  Dockerfile  Makefile  app.py  base.Dockerfile  cleaner.py  config.py  controller.py  crawler.py  docker-compose.yml  elastic.py  graph.py  helper.py  model.py  plan.py  pre_install.py  pyproject.toml
(+388 files in other folders)
