[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["WeiChen Lin <asdfg09487@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
pydantic = "^2.6.1"
flask = "^3.0.2"
numpy = "^1.26.4"
gensim = "^4.3.2"
playwright = "^1.41.2"
nltk = "^3.8.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
neo4j = "^5.17.0"
sentence-transformers = "^2.5.1"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
protobuf = "^4.25.3"
gunicorn = "^22.0.0"
instructor = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
